--- a/_includes/v1/default.html
+++ b/_includes/v1/default.html
@@ -1,3 +1,7 @@
+{%- if site.data.publications.size > 0 -%}
+{%- include v1/publications.html -%}
+{%- endif -%}  
+
 {%- if site.data.projects.size > 0 -%}
   {%- include v1/projects.html -%}
 {%- endif -%}
