--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -192,3 +192,14 @@ p.quote {
     margin-top: 1rem;
   }
 }
+
+.pub-img {
+  width: 500px;
+  height: 300px;
+  display: block;
+  border-radius: 12px;
+  background-size: 100% 100%;
+  -webkit-background-size: 100% 100%; /*  Safari  */
+  -khtml-background-size: 100% 100%; /*  Konqueror  */
+  -moz-background-size: 100% 100%; /*  Firefox  */
+}
