--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,6 +8,7 @@
       </div>
     {%- endif -%}
     <div class="{{ 'col-xs-12 ' }}{%- if site.about_profile_image -%}col-sm-8 col-md-9 col-print-12{%- endif -%}">
+      <i style="font-size: 12px;">(Last Updated: {{ site.last_updated_time }})</i>
       {{ site.about_content | strip | markdownify }}
     </div>
   </div>
