--- a/_includes/v1/default.html
+++ b/_includes/v1/default.html
@@ -15,5 +15,5 @@
 {%- endif -%}
 
 {%- if site.more_content -%}
-  {%- include v1/more.html -%}
+ <!-- {%- include v1/more.html -%} -->
 {%- endif -%}
